--- a/dat255/AndroidManifest.xml
+++ b/dat255/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="se.chalmers.dat255.risk.MainActivity"
-            android:label="@string/app_name" >
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
