Finally made the desktop version work. It's bit of an ugly solution but we arefocusing on android so it doesn't matter. If more images are to be added then they need to be added manually in BOTH projects

--- a/Risk-Desktop/.project
+++ b/Risk-Desktop/.project
@@ -14,17 +14,10 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
-	<linkedResources>
-		<link>
-			<name>assets</name>
-			<type>2</type>
-			<locationURI>ASSET_LOC/dat255/assets</locationURI>
-		</link>
-	</linkedResources>
 	<variableList>
 		<variable>
-			<name>ASSET_LOC</name>
-			<value>file:/C:/Users/Andreas/Documents/local/DAT255</value>
+			<name>ASSETS_LOC</name>
+			<value>$%7BPARENT-1-PROJECT_LOC%7D/dat255/assets</value>
 		</variable>
 	</variableList>
 </projectDescription>
