Added a test application to simulate a chat. 100% working. See CloudTest-project for info (CloudConnector.java)

--- a/network/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
+++ b/network/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
@@ -32,6 +32,9 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                
+                <action android:name="GuestbookActivity.intent.action.Launch" />
+    			<category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
