--- a/dat255/AndroidManifest.xml
+++ b/dat255/AndroidManifest.xml
@@ -25,6 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="se.chalmers.dat255.risk.activity.CreateGameActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
+        
     </application>
 
 </manifest>
