--- a/dat255/AndroidManifest.xml
+++ b/dat255/AndroidManifest.xml
@@ -32,6 +32,18 @@
             android:screenOrientation="landscape" >
         </activity>
         
+        <activity
+            android:name="se.chalmers.dat255.risk.activity.LobbyActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+            
+             <intent-filter>
+                <action android:name="LobbyActivity.intent.action.Launch" />
+    			<category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        
+        </activity>
+        
     </application>
 
 </manifest>
