--- a/network/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
+++ b/network/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
@@ -52,6 +52,12 @@
         
         
         </activity>
+                
+        <activity
+            android:name="com.google.cloud.backend.android.networkhandler.LobbyActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
 
 <!--
  You can replace the android:name attribute above with one of the the following
