--- a/dat255/AndroidManifest.xml
+++ b/dat255/AndroidManifest.xml
@@ -31,6 +31,12 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
         </activity>
+        
+        <activity
+            android:name="se.chalmers.dat255.risk.activity.JoinGameActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
 
         
     </application>
